# brain

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark.py  pyproject.toml  test_ask.py  test_ask2.py  test_ask3.py  test_ask4.py  test_ask5.py  test_ask_full.py
.github/workflows/: ci.yml
brain/: backup.py  chunker.py  cli.py  config.py  ingest.py  ollama.py  parser.py  prompts.py  query.py  remote.py  schema.py  store.py
brain/commands/: add.py  ask.py  backup.py  chat.py  do.py  eval.py  import_raw.py  init.py  purge.py  remote.py  status.py  sync_s3.py  watch.py
brain/providers/: __init__.py  base.py  litellm.py  ollama.py  openai_compat.py
brain/routines/: cli.py  events.py  models.py  paths.py  registry.py  runner.py  scheduler.py  state.py
brain/sources/: s3.py  (+1 more)
docs/: SCHEMA.md  routines.md
notes-demo/: 2026-04-23-book-notes-atomic-habits.md  2026-04-24-product-decisions.md  2026-04-25-daily-standup.md  2026-04-26-sales-meeting-acme.md
tests/: conftest.py  test_backup.py  test_chat.py  test_chunker.py  test_cli.py  test_config.py  test_config_provider.py  test_do_command.py  test_do_slack_format.py  test_eval_command.py  test_import_raw.py  test_integration.py  test_ollama.py  test_parser.py  test_provider_integration.py  test_query.py  test_query_llm_param.py  test_remote.py  test_routines_builtins.py  test_routines_cli.py  test_routines_e2e.py  test_routines_enable_disable.py  test_routines_query.py  test_routines_runner.py  test_routines_scheduler.py  test_s3_source.py  test_s3_sync.py  test_schema.py  test_store.py  test_watch.py
(+12 files in other folders)
